--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -2,6 +2,7 @@
 @value black from '../../../../../css/colors.css';
 @value red from '../../../../../css/colors.css';
 @value gray from '../../../../../css/colors.css';
+@value gray3 from '../../../../../css/colors.css';
 @value green from '../../../../../css/colors.css';
 
 .product {
@@ -22,6 +23,72 @@
         min-width: 100px;
         height: auto;
         margin: 20px 0 0 0;
+    }
+
+    &.discount {
+        background: gray3;
+    }
+
+    &.sliderProduct {
+        @media (max-width: 760px) {
+            width: 200px;
+            min-width: 200px;
+            height: auto;
+
+            .label {
+                font-size: 14px;
+                line-height: 16px;
+                padding: 3px 10px;
+            }
+
+            .bottomPanel {
+                padding: 0 9px;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .title {
+                font-size: 13px;
+                line-height: 15px;
+                padding: 7px 0 5px 0;
+            }
+
+            .price {
+                font-size: 13px;
+                line-height: 15px;
+                margin-bottom: 7px;
+            }
+
+            .priceOld {
+                font-size: 10px;
+                line-height: 11px;
+                bottom: 9px;
+                left: 9px;
+            }
+        }
+
+        @media (max-width: 760px) {
+            width: 200px;
+            min-width: 200px;
+            margin: 20px 0 0 0;
+        }
+
+        @media (max-width: 560px) {
+            width: 180px;
+            min-width: 180px;
+        }
+
+        @media (max-width: 410px) {
+            width: 154px;
+            min-width: 154px;
+        }
+
+        @media (max-width: 350px) {
+            width: 134px;
+            min-width: 134px;
+        }
     }
 }
 
@@ -50,7 +117,7 @@
     }
 }
 .discount {
-    color: red;    
+    color: red;
     background: whiteBasic;
 }
 
@@ -104,10 +171,6 @@
         font-size: 10px;
         line-height: 11px;
         bottom: 9px;
-        left: 20%;
-    }
-
-    @media (max-width: 640px) {
         left: 9px;
     }
 }
