change social media icons

--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -431,12 +431,14 @@
     padding: 23px 16px;
 }
 
-.googlePlus,
-.facebook {
+.instagram,
+.facebook,
+.youtube {
     display: block;
 }
 
-.googlePlus {
+.instagram,
+.facebook {
     margin-right: 30px;
 }
 
