--- a/src/apps/client/ui/components/Pagination/Pagination.css
+++ b/src/apps/client/ui/components/Pagination/Pagination.css
@@ -1,20 +1,13 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value gray3 from '../../../../../css/colors.css';
 @value black from '../../../../../css/colors.css';
 
 .pagination {
     position: absolute;
-    bottom: 0;
-    padding: 15px 0 30px;
+    bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: gray3;
     width: 100%;
-
-    @media (max-width: 600px) {
-        padding: 10px 0 30px;
-    }
 }
 
 .pageLink {
