--- a/src/apps/client/ui/components/Cart/Cart.css
+++ b/src/apps/client/ui/components/Cart/Cart.css
@@ -38,13 +38,11 @@
 .popupContainer {
     position: fixed;
     z-index: 10;
-    left: 0;
     top: 50px;
+    left: 0;
     width: 100%;
     height: 100%;
-    cursor: default;
     overflow: auto;
-    background-color: rgba(35, 35, 35, 0.5);
     visibility: hidden;
     opacity: 0;
     transition: all 0.5s ease-in-out;
@@ -53,6 +51,15 @@
         visibility: visible;
         opacity: 1;
     }
+}
+
+.cover {
+    position: fixed;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(35, 35, 35, 0.5);
 }
 
 .popup {
