--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -251,7 +251,7 @@
         width: 100%;
         background-color: black;
         right: 0;
-        bottom: 0;
+        bottom: -2px;
         height: 1px;
         border-radius: 4px;
     }
