--- a/src/apps/client/ui/pages/SearchPage/SearchPage.css
+++ b/src/apps/client/ui/pages/SearchPage/SearchPage.css
@@ -1,11 +1,13 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackBasic from '../../../../../css/colors.css';
 @value black from '../../../../../css/colors.css';
+@value gray3 from '../../../../../css/colors.css';
 @value gray5 from '../../../../../css/colors.css';
 @value gray6 from '../../../../../css/colors.css';
 
 .search {
-    background: gray5;
+    height: 100%;
+    background: gray3;
     padding-bottom: 40px;
 
     @media (max-width: 600px) {
@@ -78,6 +80,7 @@
 
 .searchNotFoundWrap {
     background: whiteBasic;
+    height: calc(100% - 40px);
 }
 
 .searchNotFound {
