--- a/src/apps/client/ui/pages/Partners/Partners.css
+++ b/src/apps/client/ui/pages/Partners/Partners.css
@@ -85,9 +85,10 @@
     max-width: 1240px;
     margin-top: 60px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
     @media (max-width: 1170px) {
-        flex-wrap: wrap;
         justify-content: center;
     }
 
@@ -100,23 +101,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 51px;
-
-    &:last-child {
-        margin-right: 0;
-
-        @media (max-width: 600px) {
-            margin-bottom: 0;
-        }
-    }
-
-    @media (max-width: 1340px) {
-        margin-right: 35px;
-    }
+    width: 207px;
+    margin-bottom: 60px;
 
     @media (max-width: 1170px) {
-        margin-right: 0;
-        margin-bottom: 60px;
         width: 33.333%;
     }
 
@@ -126,52 +114,27 @@
 
     @media (max-width: 600px) {
         width: 100%;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
 .partnerName {
-    margin-bottom: 15px;
+    margin: 0 0 15px 0;
     font-size: 18px;
     line-height: 21px;
     text-align: center;
+    color: black;
     text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
-
-    margin: 0 0 15px 0;
 }
 
-.partnerLogoWrapper {
+.partnerItem figure {
     position: relative;
     margin-bottom: 40px;
-
-    &:after {
-        position: absolute;
-        content: '';
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: -20px;
-        width: 109px;
-        height: 2px;
-        background-color: black;
-    }
-}
-
-.partnerLogo {
-    display: block;
-}
-
-.partnerText {
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    color: rgba(35, 35, 35, 0.7);
-    max-width: 207px;
-    width: 100%;
-}
-
-figure {
-    position: relative;
-    margin-bottom: 40px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 
     &:after {
         position: absolute;
@@ -190,6 +153,4 @@ figure {
     line-height: 16px;
     text-align: center;
     color: rgba(35, 35, 35, 0.7);
-    max-width: 207px;
-    width: 100%;
 }
