--- a/src/apps/client/ui/pages/Partners/Partners.css
+++ b/src/apps/client/ui/pages/Partners/Partners.css
@@ -101,7 +101,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 207px;
+    width: 16.7%;
     margin-bottom: 60px;
 
     @media (max-width: 1170px) {
