--- a/src/apps/client/ui/pages/Partners/Partners.css
+++ b/src/apps/client/ui/pages/Partners/Partners.css
@@ -101,7 +101,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 16.7%;
+    width: 207px;
     margin-bottom: 60px;
 
     @media (max-width: 1170px) {
@@ -153,4 +153,6 @@
     line-height: 16px;
     text-align: center;
     color: rgba(35, 35, 35, 0.7);
+    max-width: 207px;
+    width: 100%;
 }
