--- a/src/apps/client/ui/components/StyleRenderer/StyleRenderer.css
+++ b/src/apps/client/ui/components/StyleRenderer/StyleRenderer.css
@@ -3,10 +3,10 @@
 
 .style strong {
     font-family: RoundedElegance;
+    font-weight: 600;
 }
 
-.style em {
-    font-style: italic;
+.style i {
     font-family: RoundedElegance;
     font-style: italic;
 }
@@ -60,6 +60,16 @@ h6 {
     font-family: RoundedElegance;
     color: black;
     margin: 30px 0 15px 0;
+}
+
+.style h2 {
+    font-size: 22px;
+    line-height: 25px;
+}
+
+.style h3 {
+    font-size: 20px;
+    line-height: 23px;
 }
 
 .style h4 {
