--- a/src/apps/client/ui/pages/SearchPage/SearchPage.css
+++ b/src/apps/client/ui/pages/SearchPage/SearchPage.css
@@ -163,6 +163,7 @@
 .searchButton {
     background: none;
     border: none;
+    outline: none;
     position: relative;
     top: 3px;
     left: 4px;
@@ -197,4 +198,12 @@
     @media (max-width: 600px) {
         margin-top: 15px;
     }
+}
+
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    height: 100%;
 }
