--- a/src/apps/client/ui/components/PopupOrder/PopupOrder.css
+++ b/src/apps/client/ui/components/PopupOrder/PopupOrder.css
@@ -66,7 +66,7 @@
     @media (max-width: 600px) {
         font-size: 20px;
         line-height: 23px;
-        padding-bottom: 60px;
+        padding-bottom: 40px;
     }
 }
 
@@ -133,12 +133,30 @@
     @media (max-width: 600px) {
         font-size: 20px;
         line-height: 23px;
-        padding-top: 60px;
+        padding-top: 40px;
     }
 }
 
 .priceValue {    
     white-space: nowrap;
+}
+
+.link {
+    font: 18px/21px RoundedElegance;
+    padding: 10px 20px;
+    border: none;
+    color: whiteBasic;
+    background: black;
+    min-width: 200px;
+    display: block;
+    cursor: pointer;
+    margin-top: 30px;
+    text-decoration: none;
+    text-align: center;
+
+    @media (max-width: 600px) {
+        margin-top: 40px;
+    }
 }
 
 .close {
