--- a/src/apps/client/ui/pages/Partners/Partners.css
+++ b/src/apps/client/ui/pages/Partners/Partners.css
@@ -87,11 +87,6 @@
     margin-top: 60px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-
-    @media (max-width: 1170px) {
-        justify-content: center;
-    }
 
     @media (max-width: 600px) {
         margin: 20px 0 30px;
@@ -102,7 +97,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 207px;
+    width: 20%;
     margin-bottom: 60px;
 
     @media (max-width: 1170px) {
