rendering product Card

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -1,7 +1,7 @@
 @value whiteBasic: #FFFFFF;
 @value blackBasic: #000000;
-@value black: #232323;
-@value black1: #2B2B2C;
+@value blackLight: #232323;
+@value blackLighter: #2B2B2C;
 @value green: #25716C;
 @value red: #DC4E41;
 @value gray: #919191;
