--- a/src/apps/client/ui/components/Breadcrumbs/Breadcrumbs.css
+++ b/src/apps/client/ui/components/Breadcrumbs/Breadcrumbs.css
@@ -1,26 +1,22 @@
-@value black from '../../../../../css/colors.css';
+@value blackBasic from '../../../../../css/colors.css';
 @value gray1 from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
-.breadcrumbsWrap {
-  background: gray3;
-}
-
 .breadcrumbs {
   margin: 0 auto;
-  padding: 10px 0;
   max-width: 1240px;
   padding: 10px 16px;
   box-sizing: content-box;
+  background: gray3;
 
   @media (max-width: 960px) {
     padding-right: 140px;
-}
+  }
 }
 
 .breadcrumb {
   font: 14px/20px RoundedElegance;
-  color: black;
+  color: blackBasic;
   text-decoration: none;
   white-space: nowrap;
 
