--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackBasic from '../../../../../css/colors.css';
 @value red from '../../../../../css/colors.css';
 @value gray from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
@@ -9,14 +9,16 @@
     width: 288px;
     min-width: 288px;
     height: 365px;
+    max-height: 365px;
+    margin: 30px 30px 0 0;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-height: 365px;
     overflow: hidden;
-    margin: 30px 30px 0 0;
     background: whiteBasic;
+    text-decoration: none;
+    color: blackBasic;
 
     @media (max-width: 640px) {
         width: calc(50% - 10px);
@@ -135,7 +137,7 @@
 
 .title {
     font: 18px/21px RoundedElegance;
-    color: black;
+    color: blackBasic;
     padding: 5px 10px;
     text-align: center;
 
