--- a/src/apps/client/ui/pages/NotFoundPage/NotFoundPage.css
+++ b/src/apps/client/ui/pages/NotFoundPage/NotFoundPage.css
@@ -1,6 +1,5 @@
 @value blackBasic from '../../../../../css/colors.css';
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
 .root {
@@ -14,26 +13,26 @@
 }
 
 .contentWrap {
-    background: whiteBasic;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: whiteBasic;
 }
 
 .content {
     max-width: 1240px;
-    padding: 0 16px 30px 16px;
-    box-sizing: content-box;
     margin: 0 auto;
+    padding: 0 16px 30px 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-sizing: content-box;
 
     @media (max-width: 1060px) {
+        margin: 0 16px;
         padding-left: 0;
         padding-right: 0;
-        margin: 0 16px;
         overflow: hidden;
     }
 
@@ -43,23 +42,23 @@
 }
 
 .title {
-    font: 144px/166px RoundedElegance;
-    letter-spacing: 0.17em;
-    color: blackBasic;
     margin-top: 17px;
     padding: 0 60px;
     position: relative;
+    font: 144px/166px RoundedElegance;
+    letter-spacing: 0.17em;
+    color: blackBasic;
     text-align: center;
 
     &:before {
         content: "";
-        position: absolute;
-        right: 100%;
-        top: 50%;
         width: 287px;
         height: 2px;
         margin-top: -1px;
-        background: black;
+        position: absolute;
+        right: 100%;
+        top: 50%;
+        background: blackBasic;
     }
 
     @media (max-width: 710px) {
@@ -69,10 +68,9 @@
     }
 
     @media (max-width: 600px) {
+        width: 100%;
         font-size: 96px;
         line-height: 110px;
-        line-height: 110px;
-        width: 100%;
         text-align: right;
 
         &:before {
@@ -96,18 +94,18 @@
 }
 
 .text {
-    font: 24px/28px RoundedElegance;
-    color: blackBasic;
     margin-top: 20px;
     max-width: 315px;
+    font: 24px/28px RoundedElegance;
+    color: blackBasic;
 }
 
 .link {
+    margin-top: 70px;
+    padding: 10px 20px;
     font: 18px/21px RoundedElegance;
     color: whiteBasic;
-    padding: 10px 20px;
-    background: black;
-    margin-top: 70px;
+    background: blackBasic;
     text-decoration: none;
 
     @media (max-width: 710px) {
