--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -3,7 +3,7 @@
 @value blackLight: #232323;
 @value blackLighter: #2B2B2C;
 @value green: #25716C;
-@value red: #DC4E41;
+@value redBasic: #DC4E41;
 @value gray: #919191;
 @value gray1: #AFAFAF;
 @value gray2: #F8F9FA;
