--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value red from '../../../../../css/colors.css';
 @value gray from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
@@ -17,6 +17,7 @@
     overflow: hidden;
     margin: 30px 30px 0 0;
     background: whiteBasic;
+    text-decoration: none;
 
     @media (max-width: 640px) {
         width: calc(50% - 10px);
@@ -135,7 +136,7 @@
 
 .title {
     font: 18px/21px RoundedElegance;
-    color: black;
+    color: blackLight;
     padding: 5px 10px;
     text-align: center;
 
