--- a/src/apps/client/ui/components/WishList/WishList.css
+++ b/src/apps/client/ui/components/WishList/WishList.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value gray from '../../../../../css/colors.css';
 @value red from '../../../../../css/colors.css';
 
@@ -54,7 +54,7 @@
 }
 
 .popup {
-    width: 481px;
+    min-width: 481px;
     background: whiteBasic;
     position: absolute;
     top: 0;
@@ -70,12 +70,13 @@
     line-height: 28px;
     margin: 20px 0;
     text-align: center;
-    color: black;
+    color: blackLight;
 }
 
 .productsContainer {
-    max-height: 324px;
+    max-height: 320px;
     overflow-y: auto;
+    width: 100%;
 }
 
 .wishItemWrapper {
@@ -101,12 +102,17 @@
 .productImg {
     width: 120px;
     height: 120px;
+    margin-right: 30px;
+}
+
+.productInfo {
+    margin-right: 23px;
 }
 
 .productName {
     font-size: 18px;
     line-height: 21px;
-    color: black;
+    color: blackLight;
     margin-bottom: 6px;
 }
 
@@ -120,7 +126,7 @@
 .productSize {
     font-size: 14px;
     line-height: 16px;
-    color: black;
+    color: blackLight;
     margin-bottom: 17px;
 }
 
@@ -166,7 +172,7 @@
     line-height: 18px;
     color: whiteBasic;
     padding: 10px 15px;
-    background-color: black;
+    background-color: blackLight;
 }
 
 .continueShopping {
@@ -176,7 +182,7 @@
     font-size: 18px;
     line-height: 21px;
     margin: 20px 0;
-    color: black;
+    color: blackLight;
     cursor: pointer;
     position: relative;
 
@@ -185,7 +191,7 @@
         position: absolute;
         width: 100%;
         height: 1px;
-        background-color: black;
+        background-color: blackLight;
         bottom: 1px;
         left: 0;
     }
