--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -2,7 +2,7 @@
 @value blackLight from '../../../../../css/colors.css';
 @value blackLighter from '../../../../../css/colors.css';
 @value green from '../../../../../css/colors.css';
-@value red from '../../../../../css/colors.css';
+@value redBasic from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
 .root {
@@ -66,7 +66,7 @@
     margin: 10px 0;
     display: inline-block;
     font: 36px/41px RoundedElegance;
-    color: red;
+    color: redBasic;
 }
 
 .sizesTitle {
