--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -1,10 +1,10 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value blackBasic from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value redBasic from '../../../../../css/colors.css';
 
 .header {
     display: flex;
-    background-color: blackBasic;
+    background-color: blackLight;
     flex-direction: column;
     font-family: RoundedElegance;
 }
@@ -143,7 +143,7 @@
     height: 17px;
     padding-left: 40%;
     border: none;
-    background-color: blackBasic;
+    background-color: blackLight;
     font-family: RoundedElegance;
     font-size: 16px;
     color: whiteBasic;
@@ -213,8 +213,8 @@
     line-height: 18px;
     letter-spacing: 0.05em;
     text-decoration: none;
-    color: blackBasic;
-    text-shadow: -0.2px 0 blackBasic, 0 0.2px blackBasic, 0.2px 0 blackBasic, 0 -0.2px blackBasic;
+    color: blackLight;
+    text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
 
     &:last-child {
         margin-right: 0;
@@ -249,7 +249,7 @@
         position: absolute;
         content: '';
         width: 100%;
-        background-color: blackBasic;
+        background-color: blackLight;
         right: 0;
         bottom: -2px;
         height: 1px;
@@ -266,7 +266,7 @@
     background-color: whiteBasic;
     border: none;
     outline: 0;
-    color: blackBasic;
+    color: blackLight;
 
     &::placeholder {
         color: rgba(35, 35, 35, 0.7);
@@ -398,10 +398,10 @@
     font-size: 18px;
     line-height: 21px;
     letter-spacing: 0.05em;
-    color: blackBasic;
+    color: blackLight;
     padding: 15px 16px;
     position: relative;
-    text-shadow: -0.2px 0 blackBasic, 0 0.2px blackBasic, 0.2px 0 blackBasic, 0 -0.2px blackBasic;
+    text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
     border-bottom: 1px solid rgba(216, 216, 216, 0.5);
 
     &:first-child {
@@ -445,7 +445,7 @@
 .mobileMenuBottom {
     display: flex;
     flex-direction: column;
-    background-color: blackBasic;
+    background-color: blackLight;
 }
 
 .mobileMenuItemBottom {
