--- a/src/apps/client/ui/components/Tab/Tab.css
+++ b/src/apps/client/ui/components/Tab/Tab.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value green from '../../../../../css/colors.css';
 @value gray from '../../../../../css/colors.css';
 @value gray5 from '../../../../../css/colors.css';
@@ -44,7 +44,7 @@
     }
 
     &.active {
-        color: black;
+        color: blackLight;
 
         &:before {
             display: block;
@@ -94,7 +94,7 @@
 
 .descriptionTitle {
     font: 18px/21px RoundedElegance;
-    color: black;
+    color: blackLight;
     margin-top: 30px;
 
     &:first-child {
@@ -131,7 +131,7 @@
 .characterTitle {
     width: 50%;
     font: 18px/21px RoundedElegance;
-    color: black;
+    color: blackLight;
     padding-right: 10px;
 
     @media (max-width: 600px) {
