--- a/src/apps/client/ui/pages/Contacts/Contacts.css
+++ b/src/apps/client/ui/pages/Contacts/Contacts.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
 .contacts {
@@ -25,7 +25,8 @@
     margin: 30px auto 0;
     font-size: 24px;
     line-height: 28px;
-    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
+    color: blackLight;
+    text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
     position: relative;
 
     @media (max-width: 768px) {
@@ -46,7 +47,7 @@
         right: calc(100% + 99px);
         width: 287px;
         height: 2px;
-        background-color: black;
+        background-color: blackLight;
 
         @media (max-width: 950px) {
             width: 200px;
@@ -119,8 +120,8 @@
 .infoTitle {
     font-size: 18px;
     line-height: 21px;
-    color: black;
-    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
+    color: blackLight;
+    text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
     margin-bottom: 10px;
 
     @media (max-width: 768px) {
@@ -140,7 +141,7 @@
 .infoText {
     font-size: 14px;
     line-height: 16px;
-    color: black;
+    color: blackLight;
     text-decoration: none;
     margin-bottom: 10px;
 
@@ -166,7 +167,7 @@
     @mixin removeDefaultButton;
     cursor: pointer;
     margin-bottom: 30px;
-    background-color: black;
+    background-color: blackLight;
     font-family: RoundedElegance;
     font-size: 18px;
     line-height: 21px;
