--- a/src/apps/client/ui/components/AboutProductTop/AboutProductTop.css
+++ b/src/apps/client/ui/components/AboutProductTop/AboutProductTop.css
@@ -1,5 +1,5 @@
-@value black from '../../../../../css/colors.css';
-@value black1 from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
+@value blackLighter from '../../../../../css/colors.css';
 @value gray from '../../../../../css/colors.css';
 
 .root {
@@ -20,8 +20,8 @@
 
 .name {
     font: 36px/41px RoundedElegance;
-    color: black;
-    
+    color: blackLight;
+
     @media (max-width: 1000px) {
         text-align: center;
     }
@@ -45,7 +45,7 @@
 
 .warranty {
     font: 16px/18px RoundedElegance;
-    color: black1;
+    color: blackLighter;
     padding-right: 10px;
 
     @media (max-width: 600px) {
