--- a/src/apps/client/ui/components/FilterSlider/FilterSlider.css
+++ b/src/apps/client/ui/components/FilterSlider/FilterSlider.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value green from '../../../../../css/colors.css';
 @value gray1 from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
@@ -8,9 +8,9 @@
     &.active {
         .title {
             background: green;
-            color: whiteBasic;        
+            color: whiteBasic;
             transition: 0.25s ease-out;
-    
+
             &:before {
                 transform: rotate(180deg);
                 transition: 0.25s ease-out;
@@ -29,7 +29,7 @@
 .title {
     box-sizing: border-box;
     font: 300 14px/16px RoundedElegance;
-    color: black;
+    color: blackLight;
     padding: 17px 45px 17px 25px;
     position: relative;
     display: inline-block;
@@ -50,7 +50,7 @@
         margin-top: -5px;
         transition: 0.25s ease-in;
         transition-property: transform, border-color;
-    }    
+    }
 }
 
 .sliderWrapper {
