--- a/src/apps/client/ui/components/Pagination/Pagination.css
+++ b/src/apps/client/ui/components/Pagination/Pagination.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 
 .pagination {
     position: absolute;
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: black;
+    color: blackLight;
     font-family: RoundedElegance;
     font-size: 18px;
     line-height: 21px;
@@ -35,7 +35,7 @@
     }
 
     &.active {
-        background-color: black;
+        background-color: blackLight;
         color: whiteBasic;
     }
 }
