--- a/src/apps/client/ui/components/PopupOrder/PopupOrder.css
+++ b/src/apps/client/ui/components/PopupOrder/PopupOrder.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 
 .root {
     position: fixed;
@@ -12,7 +12,7 @@
     align-items: center;
     z-index: 11;
     overflow-y: auto;
-    
+
     @media (max-width: 800px) {
         display: block;
     }
@@ -32,7 +32,7 @@
     position: relative;
     background: whiteBasic;
     padding: 30px 45px;
-    width: 600px;    
+    width: 600px;
     border-radius: 5px;
     z-index: 100;
 
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: black;
+    color: blackLight;
 }
 
 .title {
@@ -137,7 +137,7 @@
     }
 }
 
-.priceValue {    
+.priceValue {
     white-space: nowrap;
 }
 
@@ -146,7 +146,7 @@
     padding: 10px 20px;
     border: none;
     color: whiteBasic;
-    background: black;
+    background: blackLight;
     min-width: 200px;
     display: block;
     cursor: pointer;
