--- a/src/apps/client/ui/pages/Articles/Articles.css
+++ b/src/apps/client/ui/pages/Articles/Articles.css
@@ -1,7 +1,7 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
-@value black1 from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
+@value blackLighter from '../../../../../css/colors.css';
 
 .articles {
     position: relative;
@@ -63,8 +63,8 @@
 .title {
     font-size: 24px;
     line-height: 28px;
-    color: black;
-    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
+    color: blackLight;
+    text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
     margin-bottom: 20px;
 
     @media (--media-tablet-s) {
@@ -75,7 +75,7 @@
 }
 
 .titleUnderline {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid blackLight;
 }
 
 .article p {
@@ -104,7 +104,7 @@
     font-family: RoundedElegance;
     font-size: 18px;
     line-height: 21px;
-    color: black1;
+    color: blackLighter;
     cursor: pointer;
     position: relative;
 
@@ -115,7 +115,7 @@
         left: 0;
         width: 100%;
         height: 1px;
-        background-color: black1;
+        background-color: blackLighter;
     }
 
     @media (--media-tablet-s) {
