--- a/src/apps/client/ui/pages/Partners/Partners.css
+++ b/src/apps/client/ui/pages/Partners/Partners.css
@@ -1,5 +1,5 @@
 @value whiteBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
 .partners {
@@ -35,7 +35,8 @@
     margin: 30px auto 0;
     font-size: 24px;
     line-height: 28px;
-    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
+    color: blackLight;
+    text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
     position: relative;
 
     @media (max-width: 768px) {
@@ -56,7 +57,7 @@
         right: calc(100% + 92px);
         width: 287px;
         height: 2px;
-        background-color: black;
+        background-color: blackLight;
 
         @media (max-width: 950px) {
             width: 200px;
@@ -122,8 +123,8 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: black;
-    text-shadow: -0.2px 0 black, 0 0.2px black, 0.2px 0 black, 0 -0.2px black;
+    color: blackLight;
+    text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
 }
 
 .logoWrapper {
@@ -138,7 +139,7 @@
         bottom: -20px;
         width: 109px;
         height: 2px;
-        background-color: black;
+        background-color: blackLight;
     }
 }
 
