--- a/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
+++ b/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
@@ -1,5 +1,6 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackBasic from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value green from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 @value gray4 from '../../../../../css/colors.css';
@@ -54,7 +55,7 @@
 .subCategory {
     margin: 0 25px;
     font: 16px/38px RoundedElegance;
-    color: blackBasic;
+    color: blackLight;
     text-decoration: none;
 
     @media (max-width: 960px) {
@@ -99,7 +100,7 @@
 .results {
     margin-top: 16px;
     font: 16px/18px RoundedElegance;
-    color: blackBasic;
+    color: blackLight;
     white-space: nowrap;
 
     @media (max-width: 960px) {
@@ -149,7 +150,7 @@
     background: gray4;
     box-sizing: border-box;
     font: 300 14px/17px RoundedElegance;
-    color: blackBasic;
+    color: blackLight;
     cursor: pointer;
     white-space: nowrap;
     overflow: hidden;
