--- a/src/apps/client/ui/pages/SearchPage/SearchPage.css
+++ b/src/apps/client/ui/pages/SearchPage/SearchPage.css
@@ -1,6 +1,6 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackBasic from '../../../../../css/colors.css';
-@value black from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 @value gray5 from '../../../../../css/colors.css';
 @value gray6 from '../../../../../css/colors.css';
@@ -30,7 +30,7 @@
 
 .panelTopTitle {
     font: 16px/18px RoundedElegance;
-    color: black;
+    color: blackLight;
     padding: 16px 0;
 
     @media (max-width: 600px) {
@@ -62,7 +62,7 @@
         content: "";
         width: 287px;
         height: 2px;
-        background: black;
+        background: blackLight;
         margin-left: 60px;
     }
 
@@ -141,14 +141,14 @@
         left: 0;
         width: 100%;
         height: 1px;
-        background: black;
+        background: blackLight;
         border-radius: 4px;
     }
 }
 
 .searchInput {
     font: 16px/18px RoundedElegance;
-    color: black;
+    color: blackLight;
     margin-top: 30px;
     width: 100%;
     border: none;
@@ -191,7 +191,7 @@
     color: whiteBasic;
     padding: 10px 20px;
     margin-top: 20px;
-    background: black;
+    background: blackLight;
     text-decoration: none;
 
     @media (max-width: 600px) {
